intento de frontend

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Hola</title>
 </head>
 <body>
-    <script type="module" src="main.js"></script>
+    <div class="MercadoLibrePrices"></div>
+    <script src="main.js"></script>
 </body>
 </html>
