Uncaught TypeError: Failed to resolve module specifier "playwright". Relative references must start with either "/", "./", or "../".
??????

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hola</title>
 </head>
 <body>
-    <div class="MercadoLibrePrices"></div>
-    <script src="main.js"></script>
+    <div class="app"></div>
+    <script type="module" src="/index.js"></script>
 </body>
 </html>
