--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola</title>
+    <title>Price Hive</title>
+    <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-    <div class="app"></div>
+    <div id="app">
+        <header>
+            <div class = "logo">
+                <img src="/assets/utils/Logo.svg" alt="Logo" width="100" height="100">
+                <h1>Price Hive</h1>    
+            </div>
+            <form action ="/search" method="GET">
+                <input type="search" name="search" id="search" placeholder="Buscar productos">
+                <button type="submit">Buscar</button>
+            </form>
+        </header>
+        <div class="display">
+            <button id="filterPrice">Filtrar por precio</button>
+            <button id="filterStore">Filtrar por tienda</button>
+            <div class="products">
+                <div id="placeholder" class="placeholder">
+                    <p>No se han cargado productos</p>
+                </div>
+            </div>
+            <div class="pagination"></div>
+        </div>
+    </div>
     <script type="module" src="/index.js"></script>
 </body>
 </html>
