--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Price Hive</title>
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <div id="app">
         <header>
             <div class = "logo">
-                <img src="/assets/utils/Logo.svg" alt="Logo" width="100" height="100">
+                <img src="/utils/Logo.svg" alt="Logo" width="100" height="100">
                 <h1>Price Hive</h1>    
             </div>
             <form action ="/search" method="GET">
